fix: 테스트 후 발견한 에러 한 번 더 수정